5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1670_2970.log
== TEST (2019-04-16 18:35:53) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(qf/q**(1/t)-1)
print(i)
if(i<=0.01):
	mensagem="real"
	print(mensagem)
else:
	mensagem="irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(qf/q**(1/t)-1)
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:18) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(q1/q2**(1/t)-1)
print(i)
if(i<=0.01):
	mensagem="real"
	print(mensagem)
else:
	mensagem="irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(q1/q2**(1/t)-1)
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:37) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(q1/q2**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="real"
	print(mensagem)
else:
	mensagem="irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(q1/q2**(1/t)-1)
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:48) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(q/q**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="real"
	print(mensagem)
else:
	mensagem="irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(q/q**(1/t)-1)
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:20) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(valor final/valor inicial**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="real"
	print(mensagem)
else:
	mensagem="irreal"
	print(mensagem)
-- ERROR:
File "XXXX", line 2
    i=(valor final/valor inicial**(1/t)-1)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:42) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(Qf/Q0**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="real"
	print(mensagem)
else:
	mensagem="irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(Qf/Q0**(1/t)-1)
NameError: name 'Qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:38) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(q**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="Real"
	print(mensagem)
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(q**(1/t)-1)
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:00) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(qf//qi**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="Real"
	print(mensagem)
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(qf//qi**(1/t)-1)
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:17) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(final//inicial**(1/t)-1)
print(round(i,2))
if(i<=0.01):
	mensagem="Real"
	print(mensagem)
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(final//inicial**(1/t)-1)
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:04) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
i=(f//i**(1/t)-1)
print(round(i,5))
if(i<=0.01):
	mensagem="Real"
	print(mensagem)
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=(f//i**(1/t)-1)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:27) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
print(round(i,5))
if(i<=0.01):
	mensagem="Real"
	print(mensagem)
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(i,5))
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:31) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
if(i<=0.01):
	mensagem="Real"
	print(round(mensagem,5))
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(i<=0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:45) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
if(taxa<=0.01):
	mensagem="Real"
	print(round(mensagem,5))
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(taxa<=0.01):
NameError: name 'taxa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:01) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
if("taxa"<=0.01):
	mensagem="Real"
	print(round(mensagem,5))
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if("taxa"<=0.01):
TypeError: '<=' not supported between instances of 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:19) 
-- CODE:
t=int(input("digite o tempo de investimento:"))
if(<=0.01):
	mensagem="Real"
	print(round(mensagem,5))
else:
	mensagem="Irreal"
	print(mensagem)
-- ERROR:
File "XXXX", line 2
    if(<=0.01):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
